test/distributions/bradc/blkCyc/blkCycSliceOOB.good
blkCycSliceOOB.chpl:16: error: halt reached - array index out of bounds
note: index was (11, -4) but array bounds are (1..10, 11..11)
note: out of bounds in dimension 0 because index 11 is not in 1..10
